Functional tests compiling